feat(api): SCRUM-41 implement record ootd media api