@@ -12,9 +12,9 @@ class PlaceSearchServiceTests {
     var results = service.search("카페", "1", "101");
 
     assertThat(results).hasSize(3);
-    assertThat(results.getFirst())
+    assertThat(results.get(0))
       .containsEntry("category", "cafe")
       .containsEntry("canAddCandidate", true);
-    assertThat(results.getFirst()).doesNotContainKeys("sco" + "re", "risk" + "Label", "risk" + "Tone");
+    assertThat(results.get(0)).doesNotContainKeys("sco" + "re", "risk" + "Label", "risk" + "Tone");
   }
 }
